crates/flux-syntax/tests/snapshots/parser_tests__parse_block.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "test",
                    params: [],
                    return_type: Some(
                        Int(
                            Span {
                                start: 13,
                                end: 16,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Block {
                                stmts: [
                                    Return {
                                        value: Int {
                                            value: 42,
                                            span: Span {
                                                start: 28,
                                                end: 30,
                                            },
                                        },
                                        span: Span {
                                            start: 21,
                                            end: 30,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 19,
                                    end: 32,
                                },
                            },
                        ],
                        span: Span {
                            start: 17,
                            end: 34,
                        },
                    },
                    span: Span {
                        start: 0,
                        end: 34,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 34,
        },
    },
)
