crates/flux-syntax/tests/snapshots/parser_tests__parse_bool_float_types.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "process",
                    params: [
                        Param {
                            name: "flag",
                            ty: Some(
                                Bool(
                                    Span {
                                        start: 17,
                                        end: 21,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 11,
                                end: 21,
                            },
                        },
                        Param {
                            name: "value",
                            ty: Some(
                                Float(
                                    Span {
                                        start: 30,
                                        end: 35,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 23,
                                end: 35,
                            },
                        },
                    ],
                    return_type: Some(
                        Int(
                            Span {
                                start: 40,
                                end: 43,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Int {
                                value: 42,
                                span: Span {
                                    start: 46,
                                    end: 48,
                                },
                            },
                        ],
                        span: Span {
                            start: 44,
                            end: 50,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 50,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 50,
        },
    },
)
