crates/flux-syntax/tests/snapshots/parser_tests__parse_complex_pipeline.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "analyze",
                    params: [
                        Param {
                            name: "value",
                            ty: Some(
                                Int(
                                    Span {
                                        start: 19,
                                        end: 22,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 12,
                                end: 22,
                            },
                        },
                    ],
                    return_type: Some(
                        Int(
                            Span {
                                start: 27,
                                end: 30,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Pipeline {
                                left: Pipeline {
                                    left: Var {
                                        name: "value",
                                        span: Span {
                                            start: 37,
                                            end: 42,
                                        },
                                    },
                                    right: Call {
                                        func: Var {
                                            name: "filter",
                                            span: Span {
                                                start: 46,
                                                end: 52,
                                            },
                                        },
                                        args: [
                                            Label {
                                                name: "#active",
                                                span: Span {
                                                    start: 53,
                                                    end: 60,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 46,
                                            end: 61,
                                        },
                                    },
                                    span: Span {
                                        start: 37,
                                        end: 61,
                                    },
                                },
                                right: Var {
                                    name: "sum",
                                    span: Span {
                                        start: 65,
                                        end: 68,
                                    },
                                },
                                span: Span {
                                    start: 37,
                                    end: 68,
                                },
                            },
                        ],
                        span: Span {
                            start: 31,
                            end: 70,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 1,
                        end: 70,
                    },
                },
            ),
        ],
        span: Span {
            start: 1,
            end: 70,
        },
    },
)
