crates/flux-syntax/tests/snapshots/parser_tests__parse_import_statement.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Err(
    Syntax {
        message: "Expected Ident, found TyTable",
        span: SourceSpan {
            offset: SourceOffset(
                7,
            ),
            length: 5,
        },
    },
)
