crates/flux-syntax/tests/snapshots/parser_tests__parse_nested_expressions.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "calc",
                    params: [],
                    return_type: None,
                    body: Block {
                        stmts: [
                            Binary {
                                op: Mul,
                                left: Binary {
                                    op: Add,
                                    left: Int {
                                        value: 1,
                                        span: Span {
                                            start: 10,
                                            end: 11,
                                        },
                                    },
                                    right: Int {
                                        value: 2,
                                        span: Span {
                                            start: 12,
                                            end: 13,
                                        },
                                    },
                                    span: Span {
                                        start: 10,
                                        end: 13,
                                    },
                                },
                                right: Binary {
                                    op: Add,
                                    left: Int {
                                        value: 3,
                                        span: Span {
                                            start: 16,
                                            end: 17,
                                        },
                                    },
                                    right: Int {
                                        value: 4,
                                        span: Span {
                                            start: 18,
                                            end: 19,
                                        },
                                    },
                                    span: Span {
                                        start: 16,
                                        end: 19,
                                    },
                                },
                                span: Span {
                                    start: 10,
                                    end: 19,
                                },
                            },
                        ],
                        span: Span {
                            start: 8,
                            end: 21,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 21,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 21,
        },
    },
)
