crates/flux-syntax/tests/snapshots/parser_tests__parse_simple_function.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "add",
                    params: [
                        Param {
                            name: "x",
                            ty: Some(
                                Int(
                                    Span {
                                        start: 8,
                                        end: 11,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 6,
                                end: 11,
                            },
                        },
                        Param {
                            name: "y",
                            ty: Some(
                                Int(
                                    Span {
                                        start: 14,
                                        end: 17,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 12,
                                end: 17,
                            },
                        },
                    ],
                    return_type: Some(
                        Int(
                            Span {
                                start: 20,
                                end: 23,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Binary {
                                op: Add,
                                left: Var {
                                    name: "x",
                                    span: Span {
                                        start: 24,
                                        end: 25,
                                    },
                                },
                                right: Var {
                                    name: "y",
                                    span: Span {
                                        start: 26,
                                        end: 27,
                                    },
                                },
                                span: Span {
                                    start: 24,
                                    end: 27,
                                },
                            },
                        ],
                        span: Span {
                            start: 23,
                            end: 28,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 28,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 28,
        },
    },
)
